--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^1.1",
-        "phpoffice/phpword": "*",
+        "phpoffice/phpword": "^1.3",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
